--- a/public/styles.css
+++ b/public/styles.css
@@ -2,4 +2,8 @@
 
 body {
     font-family: 'Spartan', sans-serif;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
